[gd_scene load_steps=3 format=3 uid="uid://bxl2bo175nkkq"]

[ext_resource type="Script" path="res://problem_panel.gd" id="1_i6225"]

[sub_resource type="LabelSettings" id="LabelSettings_w3uei"]
font_size = 60

[node name="problem_panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6225")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.0
offset_top = -177.0
offset_right = -272.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(12.2724, 25.3419)

[node name="Label1" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 3.3925
offset_top = 1.25554
offset_right = 423.393
offset_bottom = 138.256
scale = Vector2(0.0351782, 0.0150187)
text = "Prompt"
label_settings = SubResource("LabelSettings_w3uei")

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 3.39251
offset_top = 3.76662
offset_right = 423.393
offset_bottom = 140.767
scale = Vector2(0.0351782, 0.0150187)
text = "Prompt"
label_settings = SubResource("LabelSettings_w3uei")

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 3.07142
offset_top = 7.99499
offset_right = 423.071
offset_bottom = 144.995
scale = Vector2(0.0351782, 0.0150187)
text = "Prompt"
label_settings = SubResource("LabelSettings_w3uei")

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 33.7856
offset_top = 1.19925
offset_right = 453.786
offset_bottom = 138.2
scale = Vector2(0.0351782, 0.0150187)
text = "Prompt"
label_settings = SubResource("LabelSettings_w3uei")

[node name="Label5" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 33.7856
offset_top = 3.99749
offset_right = 453.786
offset_bottom = 140.998
scale = Vector2(0.0351782, 0.0150187)
text = "Prompt"
label_settings = SubResource("LabelSettings_w3uei")

[node name="Label6" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 34.3046
offset_top = 7.61585
offset_right = 454.305
offset_bottom = 144.616
scale = Vector2(0.0351782, 0.0150187)
text = "Prompt"
label_settings = SubResource("LabelSettings_w3uei")

[node name="LineEdit" type="LineEdit" parent="Panel"]
light_mask = 31
layout_mode = 0
offset_left = 2.30359
offset_top = 11.9925
offset_right = 69.3661
offset_bottom = 42.9925
scale = Vector2(0.495614, 0.109811)

[node name="ProblemIdentifier" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 3.9927
offset_top = -2.2887
offset_right = 423.993
offset_bottom = 134.712
scale = Vector2(0.0351782, 0.0150187)
label_settings = SubResource("LabelSettings_w3uei")

[connection signal="text_changed" from="Panel/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="Panel/LineEdit" to="." method="_on_line_edit_text_submitted"]
